--- a/css/1.css
+++ b/css/1.css
@@ -1,302 +1,1 @@
-body, html {
-    height: 100%;
-    padding: 0px;
-    margin: 0px;
-}
- body {
-    background-image: url("../img/fondo.jpg");
-    background-repeat: repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    color: white;
-}
- .volver {
-    position: absolute;
-    right: 40px;
-    top: 30px;
-}
- .volver img {
-    position: relative;
-    height: 200px;
-    width: 200px;
-    right: 0;
-}
- #reintentar {
-    display: none;
-}
- #rein {
-    top: 30px;
-    position: relative;
-    display: none text-align: center;
-    position: ;
-    text-align: center;
-    width: 250px;
-    background-color: purple;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    left: 43.6%;
-    border: none;
-    border: 4px solid pink;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 20px;
-}
- .encabezado {
-    text-align: center;
-    background-color: purple;
-    color: white;
-    padding: 14px 20px;
-    margin: 120px 0;
-    color: white;
-    text-shadow: 1px 1px 2px purple, 0 0 25px white, 0 0 20px pink;
-    border: none;
-    border-radius: 4px;
-    font-size: 25px;
-}
- #evaluar {
-    position: absolute;
-    text-align: center;
-    width: 250px;
-    background-color: purple;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    left: 43.6%;
-    border: none;
-    border: 4px solid pink;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 20px;
-}
- h2 {
-    text-align: center;
-    padding: 2%;
-    margin: 0px;
-    text-shadow: 10px 0px 5px purple, 0 0 25px white, 0 0 20px pink;
-    background-color: rgba(70, 0, 50, 0.5);
-}
- h3 {
-    text-align: center;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-    padding: 2%;
-    margin: 0px;
-}
- fieldset {
-    text-align: center;
-    border: none;
-    font-size: 23px;
-    background-color: rgba(0, 0, 0, 0.5);
-}
- input,#select1,#select2 {
-    font-size: 20px;
-    height: 50px;
-    width: 350px;
-    background-color: black;
-    color: pink;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-}
- #select3,#select4 {
-    height: 200px;
-    width: 400px;
-    text-align: center;
-    font-size: 20px;
-    background-color: black;
-    color: pink;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-}
- .checkbox {
-    text-align: left;
-    color: pink;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-    padding-bottom: 50px;
-    padding: 40px;
-    font-size: 30px;
-}
- label {
-    right: 140px;
-    bottom: 16px;
-    position: relative;
-    padding-top: 100px;
-    color: white;
-}
- .radio: first-of-type {
-    text-align: left;
-    color: pink;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-    padding-bottom: 50px;
-    padding: 40px;
-    font-size: 30px;
-}
- #resultadosDiv {
-    text-align: center;
-    font-size: 30px;
-    padding-top: 100px;
-    padding-bottom: 50px;
-    text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple;
-    background-color: rgba(0, 0, 0, 0.3);
-}
- #nota {
-    text-align: center;
-    text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple;
-    font-size: 60px;
-}
- #inspc {
-    background-color: rgba(0, 0, 0, 0.3);
-    position: fixed;
-    bottom: 40%;
-    font-size: 24px;
-}
- #emp {
-    position: fixed;
-    bottom: 0;
-    left: 37%;
-}
- #emp img {
-    position: relative;
-    bottom: 40px;
-}
- #encabezado {
-    position: fixed;
-    width: 100%;
-    text-align: center;
-    top: 20px;
-    background-color: rgba(0, 0, 0, 0.3);
-    font-size: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple;
-}
- #insmovil {
-    display: none;
-}
-}
-.encabezado {
-    text-align: center;
-    background-color: purple;
-    color: white;
-    padding: 14px 20px;
-    margin: 120px 0;
-    color: white;
-    text-shadow: 1px 1px 2px purple, 0 0 25px white, 0 0 20px pink;
-    border: none;
-    border-radius: 4px;
-    font-size: 25px;
-}
-#evaluar {
-    position: absolute;
-    text-align: center;
-    width: 250px;
-    background-color: purple;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    left: 43.6%;
-    border: none;
-    border: 4px solid pink;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 20px;
-}
-h2 {
-    text-align: center;
-    padding: 2%;
-    margin: 0px;
-    text-shadow: 10px 0px 5px purple, 0 0 25px white, 0 0 20px pink;
-    background-color: rgba(70, 0, 50, 0.5);
-}
-h3 {
-    text-align: center;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-    padding: 2%;
-    margin: 0px;
-}
-fieldset {
-    text-align: center;
-    border: none;
-    font-size: 23px;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-input,#select1,#select2 {
-    font-size: 20px;
-    height: 50px;
-    width: 350px;
-    background-color: black;
-    color: pink;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-}
-#select3,#select4 {
-    height: 200px;
-    width: 400px;
-    text-align: center;
-    font-size: 20px;
-    background-color: black;
-    color: pink;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-}
-.checkbox {
-    text-align: left;
-    color: pink;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-    padding-bottom: 50px;
-    padding: 40px;
-    font-size: 30px;
-}
-label {
-    right: 140px;
-    bottom: 16px;
-    position: relative;
-    padding-top: 100px;
-    color: white;
-}
-.radio {
-    text-align: left;
-    color: pink;
-    text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;
-    padding-bottom: 50px;
-    padding: 40px;
-    font-size: 30px;
-}
-#resultadosDiv {
-    text-align: center;
-    font-size: 30px;
-    padding-top: 100px;
-    padding-bottom: 50px;
-    text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-#nota {
-    text-align: center;
-    text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple;
-    font-size: 60px;
-}
-#inspc {
-    background-color: rgba(0, 0, 0, 0.3);
-    position: fixed;
-    bottom: 40%;
-    font-size: 20px;
-}
-#emp {
-    position: fixed;
-    bottom: 0;
-    left: 36%;
-}
-#emp img {
-    position: relative;
-    bottom: 40px;
-}
-#encabezado {
-    position: fixed;
-    width: 100%;
-    text-align: center;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    font-size: 50px;
-    padding-top: 20px;
-    padding-bottom: 50px;
-    text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple;
-}
-#insmovil {
-    display: none;
-}
+body, html{height: 100%; padding: 0px; margin: 0px;}body{background-image: url("../img/fondo.jpg"); background-repeat: repeat; background-size: cover; background-attachment: fixed; background-position: center; color: white;}.volver{position: absolute; right: 40px; top: 30px;}.volver img{position: relative; height: 200px; width: 200px; right: 0;}#reintentar{display: none;}#rein{top: 30px; position: relative; display: none text-align: center; position: ; text-align: center; width: 250px; background-color: purple; color: white; padding: 14px 20px; margin: 8px 0; left: 43.6%; border: none; border: 4px solid pink; border-radius: 20px; cursor: pointer; font-size: 20px;}.encabezado{text-align: center; background-color: purple; color: white; padding: 14px 20px; margin: 120px 0; color: white; text-shadow: 1px 1px 2px purple, 0 0 25px white, 0 0 20px pink; border: none; border-radius: 4px; font-size: 25px;}#evaluar{position: absolute; text-align: center; width: 250px; background-color: purple; color: white; padding: 14px 20px; margin: 8px 0; left: 43.6%; border: none; border: 4px solid pink; border-radius: 20px; cursor: pointer; font-size: 20px;}h2{text-align: center; padding: 2%; margin: 0px; text-shadow: 10px 0px 5px purple, 0 0 25px white, 0 0 20px pink; background-color: rgba(70, 0, 50, 0.5);}h3{text-align: center; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink; padding: 2%; margin: 0px;}fieldset{text-align: center; border: none; font-size: 23px; background-color: rgba(0, 0, 0, 0.5);}input,#select1,#select2{font-size: 20px; height: 50px; width: 350px; background-color: black; color: pink; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;}#select3,#select4{height: 200px; width: 400px; text-align: center; font-size: 20px; background-color: black; color: pink; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;}.checkbox{text-align: left; color: pink; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink; padding-bottom: 50px; padding: 40px; font-size: 30px;}label{right: 140px; bottom: 16px; position: relative; padding-top: 100px; color: white;}.radio: first-of-type{text-align: left; color: pink; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink; padding-bottom: 50px; padding: 40px; font-size: 30px;}#resultadosDiv{text-align: center; font-size: 30px; padding-top: 100px; padding-bottom: 50px; text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple; background-color: rgba(0, 0, 0, 0.3);}#nota{text-align: center; text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple; font-size: 60px;}#inspc{background-color: rgba(0, 0, 0, 0.3); position: fixed; bottom: 40%; font-size: 24px;}#emp{position: fixed; bottom: 0; left: 37%;}#emp img{position: relative; bottom: 40px;}#encabezado{position: fixed; width: 100%; text-align: center; top: 20px; background-color: rgba(0, 0, 0, 0.3); font-size: 50px; padding-top: 50px; padding-bottom: 50px; text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple;}#insmovil{display: none;}}.encabezado{text-align: center; background-color: purple; color: white; padding: 14px 20px; margin: 120px 0; color: white; text-shadow: 1px 1px 2px purple, 0 0 25px white, 0 0 20px pink; border: none; border-radius: 4px; font-size: 25px;}#evaluar{position: absolute; text-align: center; width: 250px; background-color: purple; color: white; padding: 14px 20px; margin: 8px 0; left: 43.6%; border: none; border: 4px solid pink; border-radius: 20px; cursor: pointer; font-size: 20px;}h2{text-align: center; padding: 2%; margin: 0px; text-shadow: 10px 0px 5px purple, 0 0 25px white, 0 0 20px pink; background-color: rgba(70, 0, 50, 0.5);}h3{text-align: center; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink; padding: 2%; margin: 0px;}fieldset{text-align: center; border: none; font-size: 23px; background-color: rgba(0, 0, 0, 0.5);}input,#select1,#select2{font-size: 20px; height: 50px; width: 350px; background-color: black; color: pink; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;}#select3,#select4{height: 200px; width: 400px; text-align: center; font-size: 20px; background-color: black; color: pink; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink;}.checkbox{text-align: left; color: pink; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink; padding-bottom: 50px; padding: 40px; font-size: 30px;}label{right: 140px; bottom: 16px; position: relative; padding-top: 100px; color: white;}.radio{text-align: left; color: pink; text-shadow: 10px 1px 5px purple, 0 0 25px white, 0 0 20px pink; padding-bottom: 50px; padding: 40px; font-size: 30px;}#resultadosDiv{text-align: center; font-size: 30px; padding-top: 100px; padding-bottom: 50px; text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple; background-color: rgba(0, 0, 0, 0.3);}#nota{text-align: center; text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple; font-size: 60px;}#inspc{background-color: rgba(0, 0, 0, 0.3); position: fixed; bottom: 40%; font-size: 20px;}#emp{position: fixed; bottom: 0; left: 36%;}#emp img{position: relative; bottom: 40px;}#encabezado{position: fixed; width: 100%; text-align: center; top: 0; background-color: rgba(0, 0, 0, 0.3); font-size: 50px; padding-top: 20px; padding-bottom: 50px; text-shadow: 12px 5px 4px purple, 0 0 25px white, 0 0 20px purple;}#insmovil{display: none;}
