--- a/css/2.css
+++ b/css/2.css
@@ -34,8 +34,7 @@ fieldset {
  #rein {
     top: 5px;
     position: relative;
-    display: none text-align: center;
-    position: ;
+    display: none;
     text-align: center;
     width: 100%;
     background-color: purple;
